fix: added bash to command

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,4 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - ./:/app
-    command: ["./build_gradio"]
+    command: ["/bin/bash", "./build_gradio"]
